# ChangeLog for net-im/jabbin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> jabbin-2.0_beta2-r2.ebuild:
  Hmm, it seems configure isn't really needed. Weird.

  15 Mar 2008; Michał Ziąbkowski <mziab@o2.pl> jabbin-2.0_beta2-r2.ebuild,
  +files/jabbin-nodebug.patch:
  Added patch for removing hardcoded debug

  15 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +jabbin-2.0_beta2-r2.ebuild, +files/jabbin-2.0beta2a_amd64.patch,
  +files/jabbin-makefile.patch:
  A LOT of clean-up in the ebuild. Now it actually works. Still some quirks to
  work out, but we're getting there.
