@@ -2,7 +2,5 @@ AUX jabbin-2.0beta2a_amd64.patch 1382 RMD160 f78836a37a9515517e08c1eba2190e5c293
 AUX jabbin-makefile.patch 301 RMD160 56cd921e191b1cb917a89cad4df30df175032da2 SHA1 26dbffbaaa5d231ade05098984712a8b598d93b6 SHA256 df75676c521766a6558cf92fec388fffd3b81eb6498f1a8f13e5fdb942558c29
 AUX jabbin-nodebug.patch 848 RMD160 edec35b6ce09537fa6de1083754864aacf2e281e SHA1 c4108800271928b106061309032a63faf3a19531 SHA256 0b78eaf3042bcbfe38234db13734d150af5aa3b06c0aa409c9b76b54a66fdafc
 DIST jabbin-2.0beta2a.tar.bz2 2601859 RMD160 7feb7d0fc9c2a924a0e9c0eef155a1a8acb42975 SHA1 6abc13e3812bc4f937bfe12e560cf4fd933408eb SHA256 18aa7235f7a8a00a8c6f66c4c6c14b7a83109b0d04e88be7f44d26a5baf2de8b
-DIST jabbin-2.0beta2a_amd64.patch.tar.bz2 976 RMD160 0c8c187433bb87a763e0342fd198f47fb8fa2e01 SHA1 0469bdcd64887fecb07d43cac9e3061c43d5a82a SHA256 53ebf657ae3535058cbd4290a97501cfb39ebdad723e7c589c02e28feba99758
-EBUILD jabbin-2.0_beta2-r1.ebuild 1370 RMD160 6a0b034298a98f72812146320160e02b06336da9 SHA1 d9d269de886b848daff9e6de06f23d5553328671 SHA256 0c7f460b313f9da49b4eec6583d49f367b6969169dd80388e54f37bc45d3f2b3
 EBUILD jabbin-2.0_beta2-r2.ebuild 1068 RMD160 900b762d3855f8180beaea425c584c4d76b9d844 SHA1 55b078bc0e48a33e73e50473e8de0531cd4d052e SHA256 8820157cbacb0a02ea5a6e3c045445a95b2a33189bc2c454ad75b86788fa6c7e
-MISC ChangeLog 664 RMD160 87e3b819baed3ec9bbe723965d968c2f0661e4e3 SHA1 ce00bbf94028f087d31fedbab7692c9f24048918 SHA256 d7cfc7c9df2d8adc3b54b702dc5db8e40996919f54aea6f8a90d8a01cb466dbc
+MISC ChangeLog 780 RMD160 288c8ea0008f9f60854ef1909894798a60db3b70 SHA1 0f89ba0ed91278353e71716e2778dd205493f32f SHA256 05d021bfc810a10acaf007f9c0b2076cddbda4d97c102ef5f365ea192b353cbf
